--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pytest-cov==6.1.1
 pytest-mock==3.14.0
 python-dotenv==0.21.1
 pytz==2022.7
+PyYAML==6.0.1
 argparse==1.4.0
 python-Levenshtein==0.25.0
 fuzzywuzzy==0.18.0
