--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 beautifulsoup4==4.11.1
 flake8==7.2.0
+importlib-metadata==6.11.0
+importlib_resources==6.4.0
 lxml==4.9.3
 requests==2.32.0
 unidecode==1.3.6
