--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -1,49 +1,14 @@
-name: Building / Updating SoccerAnalytics library
+name: Updating SoccerScrapingAnalytics library
 
 on:
-  push:
-    branches: 
-      - "main"
-      - "feature/*"
-  pull_request:
-    branches: 
-      - "main"
   workflow_dispatch:
-    inputs:
-      version_update:
-        required: true
-        type: boolean
 
 permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Lint with flake8
-      run: make lint
-      
-    # - name: Run tests with pytest
-    #   run: make test
-  
   update_version:
     runs-on: ubuntu-latest
-    needs: build
-    if: ${{ github.event_name == 'workflow_dispatch' && needs.build.result == 'success' }}
 
     steps:
     - name: Checkout code
@@ -82,16 +47,8 @@ jobs:
         # Commit et push du changement de version
         git add setup.py
         git commit -m "Update version to $new_version"
-
-          # Supprimer le tag distant s'il existe déjà
-        if git ls-remote --tags origin | grep -q "refs/tags/$tag_version"; then
-          echo "Tag $tag_version already exists. Deleting remote tag..."
-          git push origin :refs/tags/$tag_version
-        fi
-
-        # (Re)Créer le tag local
         git tag "$tag_version"
         
-        # Push les modifications et forcer le push du tag
+        # Push les modifications et le tag
         git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:$GITHUB_REF
-        git push origin "$tag_version" --force
+        git push --tags
