--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,32 +2,41 @@ name: Building SoccerScrapingAnalytics library
 
 on:
   push:
-    branches: 
-      - "main"
-      - "feature/*"
+    branches:
+      - "feature/*"   # autorisé uniquement pour les branches feature/*
   pull_request:
-    branches: 
-      - "main"
+    branches:
+      - "main"        # autorisé pour les PR vers main
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
+  block-direct-main-push:
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Block direct push to main
+        run: |
+          echo "❌ Direct pushes to main are not allowed. Please open a Pull Request."
+          exit 1
+
   build:
+    if: github.event_name == 'pull_request' || startsWith(github.ref, 'refs/heads/feature/')
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Lint with flake8
-      run: make lint
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Lint with flake8
+        run: make lint
