--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,14 +52,17 @@ jobs:
 
       - name: Determine new version
         run: |
-          last_tag=$(git tag --list "v*" | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n1)
-          last_tag=${last_tag#v}
+          # Retrieve the last release tag
+          last_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          last_tag=${last_tag#v}  # retirer le 'v'
           IFS='.' read -r major minor patch <<< "$last_tag"
 
           if [[ "${GITHUB_REF}" == "refs/heads/main" || "${GITHUB_EVENT_NAME}" == "workflow_dispatch" ]]; then
+            # Main : patch increment
             patch=$((patch + 1))
             new_version="$major.$minor.$patch"
           else
+            # Feature : snapshot based on the last tag
             new_version="$major.$minor.$patch-snapshot"
           fi
 
@@ -67,11 +70,13 @@ jobs:
           echo "New version: $new_version"
           echo "Tag version: $tag_version"
 
+          # Update the tag in setup.py
           sed -i "s/version='[^']*'/version='$new_version'/" setup.py
 
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+          # Commit and push
           git add setup.py
           git commit -m "Update version to $new_version"
           git tag "$tag_version"
