--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,17 @@ permissions:
   contents: write
 
 jobs:
-  precheck:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - run: |
-          echo "❌ Direct pushes to  main are not allowed. Please use a Pull Request."
-          exit 1
   build:
-    if: github.ref != 'refs/heads/main' || github.event_name != 'push'
     runs-on: ubuntu-latest
-    outputs:
-      build_success: ${{ steps.build_check.outcome }}
     steps:
+      - name: Check branch
+        run: |
+          if: github.ref != 'refs/heads/main' || github.event_name != 'push'
+            echo "❌ Direct pushes to main are not allowed. Please use a Pull Request."
+            exit 1
+          else
+            echo "✅ OK, continue build..."
+          fi
       - uses: actions/checkout@v4
 
       - name: Set up Python 3.11
