--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Check branch
         run: |
-          if: github.ref != 'refs/heads/main' || github.event_name != 'push'
+          if [[ "${GITHUB_REF}" == "refs/heads/main" && "${GITHUB_EVENT_NAME}" == "push" ]]; then
             echo "❌ Direct pushes to main are not allowed. Please use a Pull Request."
             exit 1
           else
