--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,11 @@ name: Build and Update SoccerScrapingAnalytics
 on:
   push:
     branches:
-      - "feature/*"    # build uniquement
-      - "main"         # build après merge
+      - "feature/*"   # build classique sur feature
   pull_request:
     branches:
-      - "main"         # build + update version pour PR
-  workflow_dispatch:    # update manuelle si besoin
+      - "main"        # build + snapshot sur PR
+  workflow_dispatch:   # main manuel : build + patch update
 
 permissions:
   contents: write
@@ -34,7 +33,7 @@ jobs:
 
   update_version:
     needs: build
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
+    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -54,12 +53,9 @@ jobs:
             # Main manuel : incrément patch
             patch=$((patch + 1))
             new_version="$major.$minor.$patch"
-          elif [[ "${GITHUB_EVENT_NAME}" == "pull_request" ]]; then
+          else
             # PR : snapshot basé sur le dernier tag release
             new_version="$major.$minor.$patch-snapshot"
-          else
-            # Merge main automatique : pas de commit, juste tag
-            new_version="$major.$minor.$patch"
           fi
 
           tag_version="v$new_version"
@@ -67,31 +63,35 @@ jobs:
           echo "Tag version: $tag_version"
 
           # Mettre à jour setup.py uniquement pour PR ou workflow_dispatch
-          if [[ "${GITHUB_EVENT_NAME}" != "push" || "$GITHUB_REF" != "refs/heads/main" ]]; then
-            sed -i "s/version='[^']*'/version='$new_version'/" setup.py
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add setup.py
-            git commit -m "Update version to $new_version" || echo "No changes to commit"
-          fi
+          sed -i "s/version='[^']*'/version='$new_version'/" setup.py
+
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Commit si nécessaire
+          git add setup.py
+          git commit -m "Update version to $new_version" || echo "No changes to commit"
 
           # Déterminer la branche cible pour le push
           if [[ "${GITHUB_EVENT_NAME}" == "pull_request" ]]; then
             branch_name="$GITHUB_HEAD_REF"
+            # Rebase pour éviter "branch tip is behind"
             git fetch origin "$branch_name"
             git rebase origin/"$branch_name" || echo "Rebase failed, continuing"
             git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:"$branch_name"
           elif [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" ]]; then
             branch_name="${GITHUB_REF#refs/heads/}"
             git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:$branch_name
-          else
-            echo "Merge on main, no push required."
           fi
 
-          # Créer le tag uniquement s'il n'existe pas
-          if git rev-parse "$tag_version" >/dev/null 2>&1; then
-            echo "Tag $tag_version already exists, skipping tag creation."
-          else
-            git tag "$tag_version"
-            git push --tags
+          # Supprimer l'ancien tag snapshot si il existe déjà
+          if [[ "${new_version}" == *"-snapshot" ]]; then
+            if git rev-parse "$tag_version" >/dev/null 2>&1; then
+              git tag -d "$tag_version"
+              git push --delete origin "$tag_version"
+            fi
           fi
+
+          # Créer le tag
+          git tag "$tag_version"
+          git push --tags
