--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Generate GitHub App token
+        id: get_app_token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Fetch all tags
         run: git fetch --tags
 
@@ -77,7 +84,7 @@ jobs:
             branch_name="$GITHUB_HEAD_REF"
             git fetch origin "$branch_name"
             git rebase origin/"$branch_name" || echo "Rebase failed, continuing"
-            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:"$branch_name"
+            git push https://x-access-token:${{ steps.get_app_token.outputs.token }}@github.com/${{ github.repository }} HEAD:"$branch_name"
           else
             echo "Main branch protected or workflow dispatch → skip commit push"
           fi
@@ -94,4 +101,4 @@ jobs:
           # Create the tag
           git tag -f "$tag_version"
 
-          git push --tags
+          git push https://x-access-token:${{ steps.get_app_token.outputs.token }}@github.com/${{ github.repository }} --tags
